--- a/main.css
+++ b/main.css
@@ -1,24 +1,24 @@
+/* ------  Global Stlying  ------ */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    font-family: 'Inter', sans-serif;
-}
-.wrapper {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: 'Inter', sans-serif;
 }
+/* ---  Nav Bar  --- */
 .desktop-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 32px 256px;
+  margin: 16px 256px;
   font-family: 'Roboto', sans-serif;
+  padding: 16px 8px;
   /* border: 2px solid; */
 }
 
@@ -78,16 +78,48 @@ body {
   width: 100%;
 }
 
+/* ---  Nav Bar  --- */
 footer {
-  padding: 20px;
+  padding: 16px;
   text-align: center; 
   font-size: 14px; 
   margin-left: 256px;
   margin-right: 256px;
-  color: #6c757d;
   margin-top: auto;
   /* border: 2px solid; */
 }
 footer p {
   margin: 0;
+  color: #6c757d;
+}
+
+/* ------  Stlying for index.html ------ */
+.homebox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  margin: 96px 256px;
+  color: #495057;
+  /* border: 2px solid; */
+}
+.propic {
+  margin-right: 24px;
+}
+.propic img {
+  width: 400px;
+  height: auto;
+  border-radius: 20%;  /* 50% = For round */
+}
+.shortbio {
+  max-width: 800px;
+  margin-left: 32px;
+}
+.shortbio h3 {
+  font-size: 24px;
+  margin: 0;
+}
+.shortbio p {
+  font-size: 16px;
+  line-height: 1.5;
 }
